# PredictFlow

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
context/: _ _init_ _.py  context_engine.py  semantic_rules.py
predictflow/: main.py  module_description.txt  requirements.txt
predictflow/actions/: Definitions_1.py  EmployeeOnboarding.py  EndEvent_1.py  StartEvent_1.py  Task_CreateAccount.py  Task_ScheduleOrientation.py  Task_VerifyDocs.py  __init__.py  step_alpha.py  step_beta.py  step_gamma.py
predictflow/api/: server.py
predictflow/api/controllers/: process_controller.py  task_controller.py  user_controller.py
predictflow/cli/: runner.py
predictflow/confidence/: adapters.py  embedding.py  metrics.py  scorer.py
predictflow/dashboard/: __init__.py  app.py  main.py  main_change name.py
predictflow/data/: predictflow.db
predictflow/engine/: autogen.py  bpmn_parser.py  evaluator.py  executor.py  hooks.py  parser.py  persistence.py  registry.py  router.py  scheduler.py  state_manager.py  utils.py
predictflow/examples/: onboarding.yaml  sample_process.bpmn  test_autogen.yaml
predictflow/fmea/: analyzer.py  evaluator.py  fmea_integration.py  hooks.py  report.py
predictflow/modeler/: editor.py  exporter.py
predictflow/prediction/: __init__.py  data_processor.py  inference.py  lstm_predictor.py  trainer.py
predictflow/routing/: __init__.py  resource_router.py
predictflow/visualize/: metrics.py
